--- a/shopweb/web/templates/productquickview.html
+++ b/shopweb/web/templates/productquickview.html
@@ -132,7 +132,7 @@
                 </div>
                 <div id="edit_prop_fields" class="row">
                   <div class="edit_props_sample">
-                    <input type='text' name='pkey' /> <input type='text' name='pval' /> <div class='clickable sprite sprite-minus top5' ></div>
+                    <input type='text' name='pkey' /> <input type='text' name='pval' /> <div class='clickable sprite sprite-minus top5 left left10' ></div>
                   </div>
                 </div>
               </div>
