--- a/shopweb/web/templates/common.html
+++ b/shopweb/web/templates/common.html
@@ -3,9 +3,7 @@
 
 <meta name="keywords" content="handmade, manual, bijuterii, jucarii, tablouri, vase ceramice si sticla, ceasuri, genti, perne etc." />
 
-
 <link href='http://fonts.googleapis.com/css?family=Dosis:400,300,700&amp;subset=latin,latin-ext' rel='stylesheet' type='text/css' />
-<link href='http://fonts.googleapis.com/css?family=Julee' rel='stylesheet' type='text/css' />
 <link href="/static/css/style.css" rel="stylesheet" type="text/css" />
 <link href="/static/css/sprite.css" rel="stylesheet" type="text/css" />
 <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css" />
@@ -42,27 +40,40 @@
   <div class="fb-root"></div>
   <div class="wrap">
     <div class="header">
-      <div class="center">
+      <div class="row center">
         <div id="logo">
-          <a href="/"> 
+          <a href="/">
             <div id="logo_img"></div>
           </a>
         </div>
-        
-        <div class="header_symbol">
+        <div class="header_nav">
           <ul>
-            <li id="logout" data-permissions="read"><a href="#"><span class="sprite sprite-logout" /></a></li>
-            <li id="current_user"><span data-snip="user"></span></li>
-            <li id="user_symbol"><a href="#"><span class="sprite sprite-user" /></a></li>
-            <li id="cart_symbol"><a href="#"><span class="sprite sprite-cart_black /static/images/cart_black.png" /></a></li>
-            <li id="settings_symbol" data-permissions="read"><a href="/accountsettings"><span class="sprite sprite-settings" /></a></li>
-            <li id="search"><input id="search_text" class="sprite sprite-search" type="text" placeholder="loc:search" /></li>
+            <li class="head_links"><a href="/" data-loc="main.page"></a></li>
+            <li class="head_links"><a href="/aboutus" data-loc="about.us"></a></li>
           </ul>
         </div>
 
+        <div class="header_controls">
+          <div class="row header_user">
+            <ul>
+              <li id="current_user"><span data-snip="user"></span></li>
+              <li id="logout" data-permissions="read"><a href="#"><span class="sprite sprite-logout" /></a></li>
+            </ul>
+          </div>
+          <div class="row">
 
-        <div class="fb_area"></div>
+            <div class="header_symbol">
+              <ul>
+                <li id="search"><input id="search_text" class="sprite sprite-search" type="text" placeholder="loc:search" /></li>
+                <li id="settings_symbol" data-permissions="read"><a href="/accountsettings"><span class="sprite sprite-settings" /></a></li>
+                <li id="cart_symbol"><a href="#"><span class="sprite sprite-cart_black /static/images/cart_black.png" /></a></li>
+                <li id="user_symbol"><a href="#"><span class="sprite sprite-user" /></a></li>
+              </ul>
+            </div>
+          </div>
+        </div>
       </div>
+      <div class="fb_area"></div>
     </div>
     <div id="notice_e"></div>
     <div id="notice_connect_e" data-snip="connect_error"></div>
