--- a/shopweb/web/templates/productquickview.html
+++ b/shopweb/web/templates/productquickview.html
@@ -113,6 +113,9 @@
                     <div class="row">
                       <label for="edit_stock" data-loc="stock"></label> <input id="edit_stock" type="text" name="edit_stock" />
                     </div>
+                    <div class="row">
+                      <label for="edit_pos" data-loc="list.pos"></label><input id="edit_pos" type="text" name="edit_position" />
+                    </div>
                     <div class="row unique_prod">
                       <input id="edit_unique" type="checkbox" name="edit_unique" /> <label for="edit_unique" data-loc="unique.product"></label>
                     </div>
