--- a/shopweb/web/templates/common.html
+++ b/shopweb/web/templates/common.html
@@ -40,7 +40,7 @@
   <div class="fb-root"></div>
   <div class="wrap">
     <div class="header_small">
-      <div class="row center">
+      <div class="header_small_line center">
         <div id="logo">
           <a href="/">
             <div id="logo_img_small"></div>
