--- a/shopweb/web/templates/common.html
+++ b/shopweb/web/templates/common.html
@@ -53,7 +53,7 @@
           </ul>
         </div>
 
-        <div class="header_symbol">
+        <div class="header_symbol header_symbol_small_top">
           <ul>
             <li id="search"><input class="search_text sprite sprite-search" type="text" placeholder="loc:search" /></li>
             <li id="settings_symbol" data-permissions="read"><a href="/accountsettings"><span class="sprite sprite-settings" /></a></li>
@@ -96,7 +96,7 @@
           </div>
           <div class="row">
 
-            <div class="header_symbol">
+            <div class="header_symbol header_symbol_top">
               <ul>
                 <li id="search"><input class="search_text sprite sprite-search" type="text" placeholder="loc:search" /></li>
                 <li id="settings_symbol" data-permissions="read"><a href="/accountsettings"><span class="sprite sprite-settings" /></a></li>
