--- a/shopweb/web/templates/productquickview.html
+++ b/shopweb/web/templates/productquickview.html
@@ -9,185 +9,10 @@
   <div class="close_product_dialog">
     <span class="sprite sprite-close" />
   </div>
+  
   <div class="content_dialog">
-    <div id="pleft">
-      <div data-snip="images">
-        <div id="detail_box">
-          <b:img id="sel_img"></b:img>
-          <div>
-            <span id="gallery_left" class="left clickable"> <span class="sprite sprite-left" />
-            </span>
-            <div id="gallery">
-              <ul>
-                <li id="thumb"><a href="#"></a></li>
-              </ul>
-            </div>
-            <span id="gallery_right" class="left clickable"> <span class="sprite sprite-right" />
-            </span>
-          </div>
-        </div>
-      </div>
-    </div>
-    <div id="pright">
-      <div class="prod_details">
-        <div class="prod_header">
-          <div id="fb-share-button">
-            <a href="#"><img src="/static/images/facebook.png" /></a>
-          </div>
-          <div id="add_to_cart_box">
-            <a id="add_to_cart" href="#"><span class="sprite sprite-cart_black" /></a>
-          </div>
-          <div class="detailPrice">
-            <span data-snip="detailPrice"></span>
-          </div>
-          <div class="prod_price_line">
-            <span data-snip="stock"></span>
-          </div>
-        </div>
-        <div class="tab_select">
-          <ul id="product_details_tab">
-            <li class="active"><a href="#prod_desc" data-loc="description"></a></li>
-            <li data-snip="can_show_specs"><a href="#prod_specs" data-loc="specs" ></a></li>
-            <li data-snip="can_show_custom"><a href="#prod_customize" data-loc="customize"></a></li>
-            <li id="edit_tab" data-permissions="write"><a href="#edit" data-loc="edit"></a></li>
-          </ul>
-        </div>
-        <div id="prod_desc" class="prod_desc tab_content">
-          <div data-snip="details"></div>
-        </div>
-        <div id="prod_specs" class="prod_specs tab_content" data-snip="can_show_specs">
-          <div data-snip="specs">
-            <div class="row_simple">
-              <div class="column1">
-                <span class="prop_name"></span>
-              </div>
-              <div class="column2">
-                <span class="prop_value"></span>
-              </div>
-            </div>
-          </div>
-        </div>
-
-        <div id="prod_customize" class="prod_specs tab_content" data-snip="can_show_custom">
-          <div class="row top10" data-snip="customize">
-            <span class="content"></span>
-          </div>
-        </div>
-
-        <div id="edit" class="tab_content" data-permissions="write">
-
-          <form id="edit_form" method="POST" data-snip="edit">
-
-            <div class="upload_form_fields">
-
-              <div class="tab_select">
-                <ul id="edit_product_tab" class="create_product_tab">
-                  <li class="active"><a href="#edit_fields" data-loc="product.info"></a></li>
-                  <li><a href="#edit_specs" data-loc="specs"></a></li>
-                  <li><a href="#edit_textzone" data-loc="description"></a></li>
-                  <li><a href="#edit_customize" data-loc="customize"></a></li>
-                  <li><a href="#edit_files" data-loc="files"></a></li>
-                </ul>
-              </div>
-
-              <div class="horiz_right btn" id="save_product">
-                <a href="#" data-loc="save"></a>
-              </div>
-
-              <div id="edit_fields" class="fields tab_content">
-                <div class="column">
-                  <div class="column">
-                    <div class="row">
-                      <label for="edit_title" data-loc="title"></label><input id="edit_title" type="text" name="edit_title" />
-                    </div>
-                    <div class="row">
-                      <label for="edit_price" data-loc="price"></label><input id="edit_price" type="text" name="edit_price" />
-                    </div>
-                    <div class="row">
-                      <label for="edit_discount_price" data-loc="discount.price"></label><input id="edit_discount_price" type="text"
-                        name="edit_discount_price" />
-                    </div>
-                    <div class="row">
-                      <label for="edit_keywords" data-loc="keywords"></label> <input id="edit_keywords" type="text" name="edit_keywords" />
-                    </div>
-                    <div class="row">
-                      <label for="edit_stock" data-loc="stock"></label> <input id="edit_stock" type="text" name="edit_stock" />
-                    </div>
-                    <div class="row">
-                      <label for="edit_pos" data-loc="list.pos"></label><input id="edit_pos" type="text" name="edit_position" />
-                    </div>
-                    <div class="row unique_prod">
-                      <input id="edit_unique" type="checkbox" name="edit_unique" /> <label for="edit_unique" data-loc="unique.product"></label>
-                    </div>
-                  </div>
-                  <div class="column left10">
-                    <div class="select_row">
-                      <label for="edit_categories" data-loc="categories"></label> <select id="edit_categories" multiple="multiple" data-snip="catlist"
-                        name="edit_categories"></select>
-                    </div>
-                  </div>
-                </div>
-              </div>
-              <div id="edit_specs" class="form_specs tab_content">
-                <div>
-                  <div id="edit_add_prop" class="left clickable sprite sprite-plus" ></div>
-                  <div class="specs_title left10" data-loc="add.specs"></div>
-                </div>
-                <div id="edit_prop_fields" class="row">
-                  <div class="edit_props_sample">
-                    <input type='text' name='pkey' /> <input type='text' name='pval' /> <div class='clickable sprite sprite-minus top5 left left10' ></div>
-                  </div>
-                </div>
-              </div>
-              <div id="edit_textzone" class="form_textzone tab_content">
-                <div class="row">
-                  <label for="edit_description" data-loc="description"></label>
-                  <div id="edit_toggle_desc" class="clickable right">
-                    <div class="edit_toggle_text" data-loc="view"></div>
-                    <div class="edit_toggle_text hidden" data-loc="edit"></div>
-                  </div>
-                </div>
-                <textarea class="edit_toggle" id="edit_description" name="edit_description"></textarea>
-                <div class="edit_toggle preview" id="edit_description_view"></div>
-              </div>
-
-              <div id="edit_customize" class="form_specs tab_content">
-                <ul>
-                  <li>
-                    <div id="add_edit_custom_prop" class="clickable sprite sprite-plus left" ></div>
-                    <div class="specs_title left10" data-loc="add.options"></div> 
-                  </li>
-                  <li>
-                    <div id="add_edit_custom_text" class="clickable sprite sprite-plus left"></div>
-                    <div class="specs_title left10" data-loc="add.text"></div> 
-                  </li>
-                </ul>
-                <div id="prop_edit_custom_fields" class="row">
-                  <div class="edit_user_options">
-                    <div class="edit_custom_options_sample">
-                      <div class='row'>
-                        <input type='text' name='customkey' /> <input type='text' name='customval' /> 
-                        <span class='clickable sprite sprite-minus top5 left left10' ></span>
-                      </div>
-                    </div>
-                    <div class="edit_custom_text_sample">
-                      <div class='row'>
-                        <input type='text' name='customtext' /> 
-                        <span class='clickable sprite sprite-minus top5 left left10' ></span>
-                      </div>
-                    </div>
-                  </div>
-                </div>
-              </div>
-
-              <div id="edit_files" class="tab_content">
-                <input type="file" id="fileselect" name="files" multiple="multiple" />
-              </div>
-            </div>
-          </form>
-        </div>
-      </div>
-    </div>
+    <div data-template="productdetailview"/>
+    
     <div class="dialog_footer">
       <div class="horiz_right" data-snip="productlink">
         <a href="#"></a>
