--- a/shopweb/web/templates/common.html
+++ b/shopweb/web/templates/common.html
@@ -39,75 +39,39 @@
 <body>
   <div class="fb-root"></div>
   <div class="wrap">
-    <div class="header_small">
-      <div class="header_small_line">
-        <div id="logo">
-          <a href="/">
-            <div id="logo_img_small"></div>
-          </a>
-        </div>
-        <div class="header_nav">
-          <ul>
-            <li class="head_links links_small"><a href="/" data-loc="main.page"></a></li>
-            <li class="head_links links_small"><a href="/aboutus" data-loc="about.us"></a></li>
-          </ul>
-        </div>
-
-        <div class="header_symbol header_symbol_small_top">
-          <ul>
-            <li id="search"><input class="search_text sprite sprite-search" type="text" placeholder="loc:search" /></li>
-            <li id="settings_symbol" data-permissions="read"><a href="/accountsettings"><span class="sprite sprite-settings" /></a></li>
-            <li id="cart_symbol"><a href="#"><span class="sprite sprite-cart_black /static/images/cart_black.png" /></a></li>
-            <li id="user_symbol"><a href="#"><span class="sprite sprite-user" /></a></li>
-          </ul>
-        </div>
-
-        <div class="header_user header_user_top_small">
-          <ul>
-            <li id="current_user"><span data-snip="user"></span></li>
-            <li id="logout" data-permissions="read"><a href="#"><span class="sprite sprite-logout" /></a></li>
-          </ul>
-        </div>
-      </div>
-      <div id="content_head"></div>
-
-    </div>
 
     <div class="header">
-      <div class="row ">
+      <div class="center">
         <div id="logo">
           <a href="/">
             <div id="logo_img"></div>
           </a>
         </div>
-        <div class="header_nav">
-          <ul>
-            <li class="head_links links_large"><a href="/" data-loc="main.page"></a></li>
-            <li class="head_links links_large"><a href="/aboutus" data-loc="about.us"></a></li>
-          </ul>
-        </div>
 
-        <div class="header_controls">
-          <div class="row header_user header_user_top">
+        <div class="header_container">
+
+          <div class="head_links">
             <ul>
+              <li><a href="/" data-loc="main.page"></a></li>
+            </ul>
+          </div>
+
+          <div class="header_symbol header_symbol_top">
+            <ul>
+              <li id="search"><input class="search_text sprite sprite-search" type="text" placeholder="loc:search" /></li>
+              <li id="settings_symbol" data-permissions="read"><a href="/accountsettings"><span class="sprite sprite-settings" /></a></li>
+              <li id="cart_symbol"><a href="#"><span class="sprite sprite-cart_white" /></a></li>
+              <li id="user_symbol"><a href="#"><span class="sprite sprite-user" /></a></li>
               <li id="current_user"><span data-snip="user"></span></li>
               <li id="logout" data-permissions="read"><a href="#"><span class="sprite sprite-logout" /></a></li>
             </ul>
           </div>
-          <div class="row">
 
-            <div class="header_symbol header_symbol_top">
-              <ul>
-                <li id="search"><input class="search_text sprite sprite-search" type="text" placeholder="loc:search" /></li>
-                <li id="settings_symbol" data-permissions="read"><a href="/accountsettings"><span class="sprite sprite-settings" /></a></li>
-                <li id="cart_symbol"><a href="#"><span class="sprite sprite-cart_black /static/images/cart_black.png" /></a></li>
-                <li id="user_symbol"><a href="#"><span class="sprite sprite-user" /></a></li>
-              </ul>
-            </div>
-          </div>
         </div>
       </div>
-      <div id="content_head"></div>
+      <div class="controls">
+        <div id="content_head"></div>
+      </div>
     </div>
     <div class="fb_area"></div>
     <div id="notice_e"></div>
