--- a/shopweb/web/static/css/sprite.css
+++ b/shopweb/web/static/css/sprite.css
@@ -1,125 +1,119 @@
 .sprite {
-    background-image: url('/static/images/spritesheet.png');
+    background-image: url(/static/images/spritesheet.png);
     background-repeat: no-repeat;
     display: block;
-}
-
-.sprite-back {
-    width: 48px;
-    height: 48px;
-    background-position: -5px -5px;
-}
-
-.sprite-add {
-    width: 32px;
-    height: 32px;
-    background-position: -5px -63px;
 }
 
 .sprite-add-item {
     width: 128px;
     height: 128px;
-    background-position: -5px -105px;
+    background-position: -5px -5px;
 }
 
 .sprite-add-item-small {
     width: 64px;
     height: 64px;
-    background-position: -5px -243px;
+    background-position: -5px -143px;
 }
 
 .sprite-cart_black {
     width: 32px;
     height: 32px;
-    background-position: -5px -317px;
+    background-position: -5px -217px;
 }
 
 .sprite-checked_checkbox {
     width: 26px;
     height: 26px;
-    background-position: -5px -359px;
+    background-position: -5px -259px;
 }
 
 .sprite-close {
     width: 32px;
     height: 32px;
-    background-position: -5px -395px;
+    background-position: -5px -295px;
 }
 
 .sprite-edit {
     width: 32px;
     height: 32px;
-    background-position: -5px -437px;
+    background-position: -5px -337px;
 }
 
 .sprite-exclamation {
     width: 64px;
     height: 64px;
-    background-position: -5px -479px;
+    background-position: -5px -379px;
 }
 
 .sprite-home {
     width: 32px;
     height: 32px;
-    background-position: -5px -553px;
+    background-position: -5px -453px;
 }
 
 .sprite-left {
     width: 32px;
     height: 32px;
-    background-position: -5px -595px;
+    background-position: -5px -495px;
 }
 
 .sprite-logout {
     width: 32px;
     height: 32px;
-    background-position: -5px -637px;
+    background-position: -5px -537px;
 }
 
 .sprite-minus {
     width: 24px;
     height: 24px;
-    background-position: -5px -679px;
+    background-position: -5px -579px;
 }
 
 .sprite-plus {
     width: 32px;
     height: 32px;
-    background-position: -5px -713px;
+    background-position: -5px -613px;
 }
 
 .sprite-right {
     width: 32px;
     height: 32px;
-    background-position: -5px -755px;
+    background-position: -5px -655px;
 }
 
 .sprite-search {
     width: 32px;
     height: 32px;
-    background-position: -5px -797px;
+    background-position: -5px -697px;
 }
 
 .sprite-settings {
     width: 32px;
     height: 32px;
-    background-position: -5px -839px;
+    background-position: -5px -739px;
+}
+
+.sprite-cart_white {
+    width: 32px;
+    height: 32px;
+    background-position: -5px -781px;
 }
 
 .sprite-unchecked_checkbox {
     width: 26px;
     height: 26px;
-    background-position: -5px -881px;
+    background-position: -5px -823px;
 }
 
 .sprite-user {
     width: 32px;
     height: 32px;
-    background-position: -5px -917px;
+    background-position: -5px -859px;
 }
 
 .sprite-useradd {
     width: 128px;
     height: 128px;
-    background-position: -5px -959px;
+    background-position: -5px -901px;
 }
