--- a/shopweb/web/templates/common.html
+++ b/shopweb/web/templates/common.html
@@ -41,33 +41,36 @@
   <div class="wrap">
 
     <div class="header">
-      <div class="center">
-        <div id="logo">
-          <a href="/">
-            <div id="logo_img"></div>
-          </a>
-        </div>
-
-        <div class="header_container">
-
-          <div class="head_links">
-            <ul>
-              <li><a href="/" data-loc="main.page"></a></li>
-            </ul>
+      <div class="header_top">
+        <div class="center">
+          <div id="logo">
+            <a href="/">
+              <div id="logo_img"></div>
+            </a>
           </div>
 
-          <div class="header_symbol header_symbol_top">
-            <ul>
-              <li id="search"><input class="search_text sprite sprite-search" type="text" placeholder="loc:search" /></li>
-              <li id="settings_symbol" data-permissions="read"><a href="/accountsettings"><span class="sprite sprite-settings" /></a></li>
-              <li id="cart_symbol"><a href="#"><span class="sprite sprite-cart_white" /></a></li>
-              <li id="user_symbol"><a href="#"><span class="sprite sprite-user" /></a></li>
-              <li id="current_user"><span data-snip="user"></span></li>
-              <li id="logout" data-permissions="read"><a href="#"><span class="sprite sprite-logout" /></a></li>
-            </ul>
-          </div>
+          <div class="header_container">
 
+            <div class="head_links">
+              <ul>
+                <li><a href="/" data-loc="main.page"></a></li>
+              </ul>
+            </div>
+
+            <div class="header_symbol header_symbol_top">
+              <ul>
+                <li id="search"><input class="search_text sprite sprite-search" type="text" placeholder="loc:search" /></li>
+                <li id="settings_symbol" data-permissions="read"><a href="/accountsettings"><span class="sprite sprite-settings" /></a></li>
+                <li id="cart_symbol"><a href="#"><span class="sprite sprite-cart_white" /></a></li>
+                <li id="user_symbol"><a href="#"><span class="sprite sprite-user" /></a></li>
+                <li id="current_user"><span data-snip="user"></span></li>
+                <li id="logout" data-permissions="read"><a href="#"><span class="sprite sprite-logout" /></a></li>
+              </ul>
+            </div>
+
+          </div>
         </div>
+
       </div>
       <div class="controls">
         <div id="content_head"></div>
